--- a/AoC-2023-Scott/2023_10.ipynb
+++ b/AoC-2023-Scott/2023_10.ipynb
@@ -2,230 +2,190 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ".....\n",
-      ".S-7.\n",
-      ".|.|.\n",
-      ".L-J.\n",
-      ".....\n",
-      "Initial state: (1, 1)\n",
-      "Total length: 25\n",
-      "source node: 6\n"
+      "Part 1 7030\n",
+      "Part 2: 285\n"
      ]
     }
    ],
    "source": [
+    "# FIX THIS\n",
+    "\n",
     "import numpy as np\n",
     "text = open('2023_10.txt', 'r').read()\n",
     "\n",
-    "text = '''.....\n",
+    "text2 = '''.....\n",
     ".S-7.\n",
     ".|.|.\n",
     ".L-J.\n",
     ".....'''\n",
     "\n",
+    "text2 = '''.F----7F7F7F7F-7....\n",
+    ".|F--7||||||||FJ....\n",
+    ".||.FJ||||||||L7....\n",
+    "FJL7L7LJLJ||LJ.L-7..\n",
+    "L--J.L7...LJS7F-7L7.\n",
+    "....F-J..F7FJ|L7L7L7\n",
+    "....L7.F7||L7|.L7L7|\n",
+    ".....|FJLJ|FJ|F7|.LJ\n",
+    "....FJL-7.||.||||...\n",
+    "....L---J.LJ.LJLJ...'''\n",
+    "\n",
     "data2D = [list(row) for row in text.split(\"\\n\") if row != \"\"]\n",
     "\n",
     "def pretty_print(data2D):\n",
     "    for data in data2D:\n",
-    "        print(\"\".join(data))\n",
+    "        print(data)\n",
     "        \n",
     "def find_S(data2D):\n",
-    "    for y, data in enumerate(data2D):\n",
-    "        for x, c in enumerate(data):\n",
+    "    for x, data in enumerate(data2D):\n",
+    "        for y, c in enumerate(data):\n",
     "            if c == \"S\":\n",
     "                return x, y\n",
     "    return None\n",
     "\n",
-    "pretty_print(data2D)\n",
-    "print(\"Initial state:\",find_S(data2D))\n",
+    "#pretty_print(data2D)\n",
+    "#print(\"Initial state:\",find_S(data2D))\n",
     "\n",
     "# set of symbols which connect left\n",
-    "connect_left = set([\"-\", \"7\", \"J\"])\n",
-    "connect_right = set([\"-\", \"L\", \"F\"])\n",
-    "connect_up = set([\"|\", \"L\", \"J\"])\n",
-    "connect_down = set([\"|\", \"7\", \"F\"])\n",
+    "all = set([\"S\", \"-\", \"7\", \"J\", \"|\", \"L\", \"F\", \".\"])\n",
+    "connect_left = set([\"S\", \"-\", \"7\", \"J\"])\n",
+    "connect_right = set([\"S\", \"-\", \"L\", \"F\"])\n",
+    "connect_up = set([\"S\", \"|\", \"L\", \"J\"])\n",
+    "connect_down = set([\"S\", \"|\", \"7\", \"F\"])\n",
+    "neighbors = [(0, -1), (1, 0), (0, 1), (-1, 0)]\n",
     "\n",
-    "total_length = len(text)-text.count(\"\\n\")\n",
-    "print(\"Total length:\", total_length)\n",
-    "netmat = np.zeros((total_length, total_length), dtype=np.int8)\n",
-    "sidelen = int(np.sqrt(total_length))\n",
-    "for ind1 in range(0, total_length):\n",
-    "    connection[ind] = textind1%sidelen, ind1//sidelen] = \n",
-    "# determine the network connectivity and source location\n",
-    "for ind1 in range(0, total_length):\n",
-    "    for ind2 in [ind1-1, ind1+1, ind1-sidelen, ind1+sidelen]:\n",
-    "        if (ind2 < 0) or (ind2 >= total_length):\n",
-    "            continue\n",
-    "        if (((ind1+1) % sidelen == 0) and (ind2 == ind1+1)) or (((ind1) % sidelen == 0) and (ind2 == ind1-1)):\n",
-    "            continue\n",
-    "        \n",
-    "        if ind2 >= 0 and ind2 < total_length:\n",
-    "            netmat[ind, ind2] = 1\n",
-    "            netmat[ind2, ind] = 1\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "x, y = find_S(data2D)\n",
+    "path = []\n",
+    "steps = 0\n",
+    "prev_steps = -1\n",
+    "while steps != prev_steps:\n",
+    "    prev_steps = steps\n",
+    "    if 0 <= x-1:\n",
+    "        #print(x,y,data2D[x][y])\n",
+    "        if (data2D[x][y] in connect_up) and (data2D[x-1][y] in connect_down):\n",
+    "            data2D[x][y] = steps\n",
+    "            path.append((x,y))\n",
+    "            steps = steps + 1\n",
+    "            x=x-1\n",
+    "    if y+1 < len(data2D):\n",
+    "        if (data2D[x][y] in connect_right) and (data2D[x][y+1] in connect_left):\n",
+    "            data2D[x][y] = steps\n",
+    "            path.append((x,y))\n",
+    "            steps = steps + 1\n",
+    "            y=y+1\n",
+    "    if x+1 < len(data2D[0]):\n",
+    "        if (data2D[x][y] in connect_down) and (data2D[x+1][y] in connect_up):\n",
+    "            data2D[x][y] = steps\n",
+    "            path.append((x,y))\n",
+    "            steps = steps + 1\n",
+    "            x=x+1\n",
+    "    if 0 <= y-1:\n",
+    "        if (data2D[x][y] in connect_left) and (data2D[x][y-1] in connect_right):\n",
+    "            data2D[x][y] = steps\n",
+    "            path.append((x,y))\n",
+    "            steps = steps + 1\n",
+    "            y=y-1\n",
+    "data2D[x][y] = steps\n",
+    "path.append((x,y))\n",
     "\n",
+    "#print(\"Steps:\", steps)\n",
+    "#print(pretty_print(data2D))\n",
+    "#print(\"Path:\", len(path),path)\n",
+    "print(\"Part 1\",int((steps+1)/2))\n",
     "\n",
-    "print(text2)\n",
-    "    \n",
+    "prev = None\n",
+    "for pind, this in enumerate(path):\n",
+    "    if prev == None:\n",
+    "        prev = this\n",
+    "        continue\n",
+    "    ud = this[0]-prev[0]\n",
+    "    lr = this[1]-prev[1]\n",
+    "    if ud < 0: # up\n",
+    "        if data2D[this[0]][max(this[1]-1,0)] in all:\n",
+    "            data2D[this[0]][max(this[1]-1,0)] = \"l\"\n",
+    "        if data2D[prev[0]][max(prev[1]-1,0)] in all:\n",
+    "            data2D[prev[0]][max(prev[1]-1,0)] = \"l\"\n",
+    "        if data2D[this[0]][min(this[1]+1,len(data2D)-1)] in all:\n",
+    "            data2D[this[0]][min(this[1]+1,len(data2D)-1)] = \"r\"        \n",
+    "        if data2D[prev[0]][min(prev[1]+1,len(data2D)-1)] in all:\n",
+    "            data2D[prev[0]][min(prev[1]+1,len(data2D)-1)] = \"r\"\n",
+    "    if ud > 0: # down\n",
+    "        if data2D[this[0]][max(this[1]-1,0)] in all:\n",
+    "            data2D[this[0]][max(this[1]-1,0)] = \"r\"\n",
+    "        if data2D[prev[0]][max(prev[1]-1,0)] in all:\n",
+    "            data2D[prev[0]][max(prev[1]-1,0)] = \"r\"\n",
+    "        if data2D[this[0]][min(this[1]+1,len(data2D)-1)] in all:\n",
+    "            data2D[this[0]][min(this[1]+1,len(data2D)-1)] = \"l\"\n",
+    "        if data2D[prev[0]][min(prev[1]+1,len(data2D)-1)] in all:\n",
+    "            data2D[prev[0]][min(prev[1]+1,len(data2D)-1)] = \"l\"       \n",
+    "    if lr < 0: # left\n",
+    "        if data2D[max(this[0]-1,0)][this[1]] in all:\n",
+    "            data2D[max(this[0]-1,0)][this[1]] = \"r\"\n",
+    "        if data2D[max(prev[0]-1,0)][prev[1]] in all:\n",
+    "            data2D[max(prev[0]-1,0)][prev[1]] = \"r\"\n",
+    "        if data2D[min(this[0]+1,len(data2D)-1)][this[1]] in all:\n",
+    "            data2D[min(this[0]+1,len(data2D)-1)][this[1]] = \"l\"\n",
+    "        if data2D[min(prev[0]+1,len(data2D)-1)][prev[1]] in all:\n",
+    "            data2D[min(prev[0]+1,len(data2D)-1)][prev[1]] = \"l\"\n",
+    "    if lr > 0: # right\n",
+    "        if data2D[max(this[0]-1,0)][this[1]] in all:\n",
+    "            data2D[max(this[0]-1,0)][this[1]] = \"l\"\n",
+    "        if data2D[max(prev[0]-1,0)][prev[1]] in all:\n",
+    "            data2D[max(prev[0]-1,0)][prev[1]] = \"l\"\n",
+    "        if data2D[min(this[0]+1,len(data2D)-1)][this[1]] in all:\n",
+    "            data2D[min(this[0]+1,len(data2D)-1)][this[1]] = \"r\"\n",
+    "        if data2D[min(prev[0]+1,len(data2D)-1)][prev[1]] in all:\n",
+    "            data2D[min(prev[0]+1,len(data2D)-1)][prev[1]] = \"r\"\n",
+    "    prev=this\n",
     "\n",
-    "def start_propegate(lines, i, j):\n",
-    "    lines[i][j]=0\n",
-    "    if (i-1 >= 0):\n",
-    "        if lines[i-1][j] == \"7\":\n",
-    "            lines[i-1][j] = 1\n",
-    "            propegate(lines, i-1, j-1, 2)\n",
-    "        elif lines[i-1][j] == \"F\":\n",
-    "            lines[i-1][j] = 1\n",
-    "            propegate(lines, i-1, j+1, 2)\n",
-    "        elif lines[i-1][j] == \"|\":\n",
-    "            lines[i-1][j] = 1\n",
-    "            propegate(lines, i-2, j, 2)\n",
-    "    if (i+1 < len(lines)):\n",
-    "        if lines[i+1][j] == \"J\":\n",
-    "            lines[i+1][j] = 1\n",
-    "            propegate(lines, i+1, j-1, 2)\n",
-    "        elif lines[i+1][j] == \"L\":\n",
-    "            lines[i+1][j] = 1\n",
-    "            propegate(lines, i+1, j+1, 2)\n",
-    "        elif lines[i+1][j] == \"|\":\n",
-    "            lines[i+1][j] = 1\n",
-    "            propegate(lines, i+2, j, 2) \n",
-    "    if (j-1 >= 0):\n",
-    "        if lines[i][j-1] == \"L\":\n",
-    "            lines[i][j-1] = 1\n",
-    "            propegate(lines, i-1, j-1, 2)\n",
-    "        elif lines[i][j-1] == \"F\":\n",
-    "            lines[i][j-1] = 1\n",
-    "            propegate(lines, i+1, j-1, 2)\n",
-    "        elif lines[i][j-1] == \"-\":\n",
-    "            lines[i][j-1] = 1\n",
-    "            propegate(lines, i, j-2, 2)\n",
-    "    if (j+1 < len(lines)):\n",
-    "        if lines[i][j+1] == \"J\":\n",
-    "            lines[i][j+1] = 1\n",
-    "            propegate(lines, i-1, j+1, 2)\n",
-    "        elif lines[i][j+1] == \"7\":\n",
-    "            lines[i][j+1] = 1\n",
-    "            propegate(lines, i+1, j+1, 2)\n",
-    "        elif lines[i][j+1] == \"-\":\n",
-    "            lines[i][j+1] = 1\n",
-    "            propegate(lines, i, j+2, 2)\n",
-    "  \n",
-    "def propegate(lines, i, j, step):\n",
-    "    print('p',i,j,step)\n",
-    "    if (i > 0) & (i < len(lines)) & (j > 0) & (j < len(lines)):\n",
-    "        i1 = None\n",
-    "        if lines[i][j] == \"7\":\n",
-    "            i1 = 0\n",
-    "            j1 = -1\n",
-    "            i2 = +1\n",
-    "            j2 = 0\n",
-    "        elif lines[i][j] == \"J\":\n",
-    "            i1 = 0\n",
-    "            j1 = -1\n",
-    "            i2 = -1\n",
-    "            j2 = 0\n",
-    "        elif lines[i][j] == \"L\":\n",
-    "            i1 = -1\n",
-    "            j1 = 0\n",
-    "            i2 = 0\n",
-    "            j2 = +1\n",
-    "        elif lines[i][j] == \"F\":\n",
-    "            i1 = +1\n",
-    "            j1 = 0\n",
-    "            i2 = 0\n",
-    "            j2 = +1\n",
-    "        elif lines[i][j] == \"|\":\n",
-    "            i1 = -1\n",
-    "            j1 = 0\n",
-    "            i2 = +1\n",
-    "            j2 = 0\n",
-    "        elif lines[i][j] == \"-\":\n",
-    "            i1 = 0\n",
-    "            j1 = -1\n",
-    "            i2 = 0\n",
-    "            j2 = +1\n",
-    "        if i1 != None:\n",
-    "            lines[i][j] = step\n",
-    "            propegate(lines, i+i1, j+j1, step+1)\n",
-    "            propegate(lines, i+i2, j+j2, step+1)\n",
-    "        \n",
-    "        \n",
-    "        \n",
+    "#print(pretty_print(data2D))\n",
     "\n",
-    "        \n",
-    "# the text is a 2D array of characters\n",
-    "# we need convert it to a 2D array of integers\n",
-    "# 0 = empty (.)\n",
-    "# 1 = N-S pipe (|)\n",
-    "# 2 = E-W pipe (-)\n",
-    "# 3 = corner (L)\n",
-    "# 4 = corner (7)\n",
-    "# 5 = corner (J)\n",
-    "# 6 = corner (F)\n",
-    "for i in range(len(lines)):\n",
-    "    lines[i] = list(lines[i])\n",
-    "    for j in range(len(lines[i])):\n",
-    "        if lines[i][j] == \"S\":\n",
-    "            si = i\n",
-    "            sj = j\n",
+    "def color(x,y,c,data2D):\n",
+    "    data2D[x][y] = c\n",
+    "    if data2D[max(x-1,0)][y] in all:\n",
+    "        color(max(x-1,0),y,c,data2D)\n",
+    "    if data2D[min(x+1,len(data2D)-1)][y] in all:\n",
+    "        color(min(x+1,len(data2D)-1),y,c,data2D)\n",
+    "    if data2D[x][max(y-1,0)] in all:\n",
+    "        color(x,max(y-1,0),c,data2D)\n",
+    "    if data2D[x][min(y+1,len(data2D)-1)] in all:\n",
+    "        color(x,min(y+1,len(data2D)-1),c,data2D)\n",
     "            \n",
     "\n",
-    "            \n",
-    "            \n",
-    "            \n",
+    "notdone = True\n",
+    "count=0\n",
+    "while notdone and count<1000:\n",
+    "    notdone = False\n",
+    "    count = count + 1\n",
+    "    for x, data in enumerate(data2D):\n",
+    "        for y, c in enumerate(data):\n",
+    "            if c == 'r':\n",
+    "                color(x,y,'r',data2D)\n",
+    "            elif c == 'l':  \n",
+    "                color(x,y,'l',data2D)\n",
+    "            elif c in all:\n",
+    "                notdone = True\n",
+    "                \n",
+    "#pretty_print(data2D)\n",
     "\n",
+    "rcount = 0\n",
+    "for y, data in enumerate(data2D):\n",
+    "        for x, c in enumerate(data):    \n",
+    "            if c == 'r':\n",
+    "                rcount = rcount + 1\n",
+    "                \n",
+    "print(\"Part 2:\",rcount)     \n",
     "\n",
-    "\n",
-    "print(lines)\n",
-    "start_propegate(lines, si, sj)\n",
-    "print(lines)\n",
-    "\n",
-    "max = -1\n",
-    "for i in range(len(lines)):\n",
-    "    lines[i] = list(lines[i])\n",
-    "    for j in range(len(lines[i])):\n",
-    "        # if lines[i][j] is a number \n",
-    "        if type(lines[i][j]) == int:\n",
-    "            if lines[i][j] > max:\n",
-    "                max = lines[i][j]\n",
-    "            si = i\n",
-    "            sj = j\n",
-    "            \n",
-    "print((max+1)/2)\n",
-    "\n",
-    "\n",
+    "                \n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
