--- a/AoC-2023-Scott/2023_17.ipynb
+++ b/AoC-2023-Scott/2023_17.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -43,13 +43,6 @@
     "        \n",
     "#pretty_print(data2D)\n",
     "\n",
-    "start = (0, 0)\n",
-    "lastmove = (0,0)\n",
-    "streak = 4 # hack to start the moves\n",
-    "heatloss = 0\n",
-    "\n",
-    "\n",
-    "\n",
     "for part in range(2):\n",
     "    if part == 0:\n",
     "        minstreak = 1\n",
@@ -58,6 +51,11 @@
     "        minstreak = 4\n",
     "        maxstreak = 10\n",
     "\n",
+    "    start = (0, 0)\n",
+    "    lastmove = (0,0)\n",
+    "    streak = 4 # hack to start the moves (for part 2)\n",
+    "    heatloss = 0\n",
+    "    \n",
     "    # create a heap, a set, and a dictionary\n",
     "    heap = []\n",
     "    states = set()\n",
