--- a/AoC-2023-Scott/2023_14.ipynb
+++ b/AoC-2023-Scott/2023_14.ipynb
@@ -160,8 +160,7 @@
     "counter = 0\n",
     "while counter < 194:\n",
     "    counter2 = 0\n",
-    "    while counter2 < 4:\n",
-    "\n",
+    "    while counter2 < 4: # for each rotation\n",
     "        for i in range(1, len(data2D)):\n",
     "            for j in range(len(data2D[i])):\n",
     "                k = i\n",
@@ -181,9 +180,6 @@
     "            print(counter,counter%13,load,'***')\n",
     "        else:\n",
     "            print(counter,counter%13,load)\n",
-    "            \n",
-    "        \n",
-    "\n",
     "    counter+=1\n",
     "\n",
     "print('Part 2:',load)\n",
