first non-fork commit

--- a/scott/2023_19.ipynb
+++ b/scott/2023_19.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -132,18 +132,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['a<', '2006', 'qkq'], ['m>', '2090', 'A'], ['rfg']]\n"
+      "Part 2: 113550238315130\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "xmasmin = [0,0,0,0] \n",
+    "xmasmax = [4001,4001,4001,4001]\n",
+    "leaf = []\n",
+    "def pushrule(name,part,xmasmin,xmasmax):\n",
+    "    #print(name,part,xmasmin,xmasmax)\n",
+    "    if name == 'R':\n",
+    "        return\n",
+    "    elif name == 'A':\n",
+    "        leaf.append([xmasmin,xmasmax])\n",
+    "        return\n",
+    "    cond = data_dict[name][part]\n",
+    "    if len(cond) == 1:\n",
+    "        pushrule(cond[0],0,xmasmin[:],xmasmax[:])\n",
+    "        return\n",
+    "    else:   \n",
+    "        #find index of char in data_dict[rule][part][0] in 'xmas'\n",
+    "        ind = 'xmas'.index(cond[0][0])\n",
+    "        if cond[0][1] == '<':\n",
+    "            val = xmasmax[ind]\n",
+    "            xmasmax[ind] = min(xmasmax[ind],int(cond[1]))\n",
+    "            pushrule(cond[2],0,xmasmin[:],xmasmax[:])\n",
+    "            xmasmax[ind] = val\n",
+    "            xmasmin[ind] = max(xmasmin[ind],int(cond[1])-1)\n",
+    "            pushrule(name,part+1,xmasmin[:],xmasmax[:])\n",
+    "            return\n",
+    "        elif cond[0][1] == '>':\n",
+    "            val = xmasmin[ind]\n",
+    "            xmasmin[ind] = max(xmasmin[ind],int(cond[1]))\n",
+    "            pushrule(cond[2],0,xmasmin[:],xmasmax[:])\n",
+    "            xmasmin[ind] = val\n",
+    "            xmasmax[ind] = min(xmasmax[ind],int(cond[1])+1)\n",
+    "            pushrule(name,part+1,xmasmin[:],xmasmax[:])\n",
+    "            return\n",
+    "        else:\n",
+    "            print('error')\n",
+    "            return -1\n",
+    "pushrule('in', 0, xmasmin, xmasmax)\n",
+    "\n",
+    "total=0\n",
+    "for i in range(len(leaf)):\n",
+    "    perms = 1\n",
+    "    for j in range(4):\n",
+    "        perms *= (leaf[i][1][j] - leaf[i][0][j]-1)\n",
+    "    total += perms\n",
+    "print('Part 2:',total)\n"
+   ]
   }
  ],
  "metadata": {
